<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".recipes.recipe_details.RecipeDetailsFragment"
    android:orientation="vertical"
    android:baselineAligned="false">

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/recipe_steps_player_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

</LinearLayout>